# myvrp

./: .env.example  .gitignore  ABOUT.md  AGENTS.md  CLAUDE.md  Dockerfile  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  PLAN.md  README.md  app.py  check_csv.py  conf.yaml  deploy.sh  docker_run.sh  nginx.conf  pyproject.toml  requirements.txt  run_app.sh  run_docker.sh  test_excel_output.py  test_excel_simple.py  test_fix_orders.py  test_map_visualization.py  test_smart_allocation.py  test_two_tier_solve.py  verify_phase1.py
.serena/: project.yml
.streamlit/: config.toml
example/: example_input.csv  example_input_vehicle.yaml
results/: route_map_20251010_200012.html
src/models/: hub_config.py  location.py  order.py  route.py  vehicle.py
src/output/: README.md  __init__.py  csv_generator.py  excel_generator.py
src/solver/: blind_van_router.py  dynamic_source_assigner.py  multi_trip_solver.py  two_tier_vrp_solver.py  vrp_solver.py
src/utils/: csv_parser.py  distance_calculator.py  hub_routing.py  time_window_clustering.py  yaml_parser.py
src/visualization/: map_visualizer.py
tests/integration/: test_end_to_end.py  test_smart_routing_e2e.py  test_validation.py
tests/unit/: test_csv_parser.py  test_distance_calculator.py  test_excel_generator.py  test_multi_trip_solver.py  test_smart_routing.py  test_time_window_clustering.py  test_vehicle_prefix.py  test_vrp_solver.py  test_yaml_parser.py
